@@ -22,7 +22,7 @@ use Class::XSAccessor {
 };
 
 # Default implementation of refresh
-sub refresh {1}
+sub refresh { 1 }
 
 # Overrides and then calls XS wx Menu::Append.
 # Adds any hotkeys to global registry of bound keys
@@ -131,7 +131,6 @@ sub _add_menu_item {
 
 	return $item;
 }
-
 
 sub build_menu_from_actions {
 	my $self    = shift;
