@@ -339,8 +339,6 @@ sub new {
 		'edit.show_as_decimal',
 	);
 
-	$self->refresh;
-
 	return $self;
 }
 
