@@ -114,8 +114,6 @@ sub new {
 		'help.about',
 	);
 
-	$self->refresh;
-
 	return $self;
 }
 
